--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
         </div>
       </center>
     </h3>
+    <br><br>
+    <p class="btn btn-danger result_para_tag">Family member:
+      <span id="result_object_name"></span>
+      </p>
+    
+      <br><br>
+    
+      <p class="btn btn-danger result_para_tag">Accuracy:
+        <span id="result_object_accuracy"></span>
+        </p>
   </center>
+  <div class="copy_right_footer">
+    Developed by - Ananya
+  </div>
 
 <script src="main.js"></script>
 </body>
